# keyrex

./: CONTRIBUTING.md  Cargo.toml  ENCRYPTION.md  LICENSE.md  README.md  example.config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
completions/: keyrex.bash
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_encrypt_decrypt.rs  fuzz_json_parsing.rs  fuzz_password_validation.rs  fuzz_vault_operations.rs
src/: cli.rs  clipboard.rs  completions.rs  config.rs  crypto.rs  lib.rs  logging.rs  main.rs  output.rs  security.rs  session.rs  test_utils.rs  vault.rs
src/commands/: crud.rs  meta.rs  mod.rs  query.rs  security.rs
tests/: filesystem_tests.rs  integration_test.rs  security_tests.rs  test_config.toml
tests/common/: mod.rs
