[package]
name = "keyrex"
version = "0.1.0"
edition = "2021"
description = "Secure, lightweight key-value vault for managing secrets locally using AES-256-GCM encryption."
keywords = ["rust", "encryption", "vault", "cli", "security"]
license = "Apache-2.0"
homepage = "https://github.com/spinualexandru/keyrex"
repository = "https://github.com/spinualexandru/keyrex"
documentation = "https://github.com/spinualexandru/keyrex#readme"
categories = ["command-line-utilities"]

[dependencies]
aes-gcm = "0.10.3"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
colored = "3.0.0"
dirs = "6.0.0"
fslock = "0.2.1"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.9.2"
rpassword = "7.4.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
sha2 = "0.10.9"
shellexpand = "3.1.1"
subtle = "2.6.1"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
zeroize = "1.8.2"

[lib]
name = "keyrex"
path = "src/lib.rs"

[[bin]]
name = "keyrex"
path = "src/main.rs"
